--- a/package.json
+++ b/package.json
@@ -32,12 +32,20 @@
   },
   "detox": {
     "configurations": {
-      "ios.sim.debug": {
+      "ios": {
         "binaryPath": "ios/build/JoseApp/Build/Products/Debug-iphonesimulator/JoseApp.app",
         "build": "xcodebuild -workspace ios/JoseApp.xcworkspace -scheme JoseApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build/JoseApp",
         "type": "ios.simulator",
         "device": {
           "type": "iPhone 11 Pro"
+        }
+      },
+      "android": {
+        "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+        "build": "npx jetifier && cd ./android && ./gradlew app:assembleDebug app:assembleAndroidTest -DtestBuildType=debug  && cd ..",
+        "type": "android.emulator",
+        "device": {
+          "avdName": "Detox_Tests"
         }
       }
     },
